Add and Style book sshelves and the add book button

--- a/index.html
+++ b/index.html
@@ -8,9 +8,17 @@
     <title>Book Shelf</title>
 </head>
 <body>
+    <header>
+        <a href="index.html"><h1>Odin's Library</h1></a>
+    </header>
+
+    <main>
+        <div class="shelves" id="shelves"></div>
+    </main>
+    <button class="add_book" id="add_book">Add Book</button>
 
 
-    
+
     <script src="./main.js"></script>
 </body>
 </html>
